<resources>
	<string name="app_name">Paletti</string>
	<string name="label_initial_touch_here">Touch here to select an image.</string>
	<string name="hint_posterized_image">Posterized image</string>
	<string name="toast_saved_image">Saved image to %1$s</string>

	<string name="label_about_website">Website</string>
	<string name="label_about_author">Author</string>
	<string name="label_about_copyright">Copyright</string>
	<string name="label_about_copyright_value">© 2021–2025, All rights reserved</string>
	<string name="paletti_link"><a href="https://paletti.app">https://paletti.app</a></string>
	<string name="author_link"><a href="https://groundctrl.earth">Eroica</a></string>

	<string name="leptonica_license">&lt;p&gt;Copyright (C) 2001 Leptonica. All rights reserved.&lt;/p&gt;

		&lt;p&gt;Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:&lt;/p&gt;

		&lt;ol&gt;
		&lt;li&gt;Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.&lt;/li&gt;
		&lt;li&gt;Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.&lt;/li&gt;
		&lt;/ol&gt;

		&lt;p&gt;THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS ``AS IS\'\' AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL ANY CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.&lt;/p&gt;
	</string>
	<string name="leptonica_attribution">Paletti uses Leptonica to read and process images. Leptonica’s license:</string>
	<string name="tooltip_color_slider">Change size of color palette</string>
	<string name="tooltip_mono_switch">Toggle between monochrome and colored image</string>
	<string name="intent_pick_image">Pick Image</string>
	<string name="intent_share_to_application">Choose application</string>
	<string name="menu_about">About</string>
	<string name="menu_crop_image">Crop image</string>
	<string name="menu_share_image">Share image</string>
	<string name="menu_share_palette">Share palette</string>
	<string name="menu_save_image">Save image</string>
	<string name="menu_open_image">Open image</string>
	<string name="toast_error_load">Paletti could not read this image</string>
	<string name="shortcut_open">Open image</string>
</resources>
