<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<data>

		<import type="android.text.Html" />

		<import type="android.text.method.LinkMovementMethod" />

		<import type="app.paletti.android.BuildConfig" />
	</data>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:paddingStart="16dp"
			android:paddingEnd="16dp"
			android:paddingTop="64dp"
			android:paddingBottom="64dp">

			<ImageView
				android:layout_width="128dp"
				android:layout_height="128dp"
				android:layout_gravity="center"
				app:srcCompat="@mipmap/app_logo" />

			<TextView
				android:textAppearance="?textAppearanceHeadline6"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/app_name"
				android:gravity="center"
				android:drawablePadding="4dp" />

			<TextView
				android:textAppearance="?textAppearanceSubtitle2"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:text="@{BuildConfig.VERSION_NAME}"
				tools:text="v2024.09" />

			<com.google.android.material.card.MaterialCardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="32dp"
				app:cardCornerRadius="8dp"
				app:cardElevation="8dp">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="16dp">

						<TextView
							android:textAppearance="?textAppearanceBody2"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/label_about_website" />

						<TextView
							android:textAppearance="?textAppearanceBody2"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_marginStart="8dp"
							android:layout_weight="1"
							android:gravity="end"
							android:autoLink="web"
							android:linksClickable="true"
							android:text="@string/paletti_link" />
					</LinearLayout>

					<com.google.android.material.divider.MaterialDivider
						android:layout_width="match_parent"
						android:layout_height="wrap_content" />

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="16dp">

						<TextView
							android:textAppearance="?textAppearanceBody2"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/label_about_author" />

						<TextView
							android:id="@+id/authorLink"
							android:textAppearance="?textAppearanceBody2"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_marginStart="8dp"
							android:layout_weight="1"
							android:gravity="end"
							app:movementMethod="@{LinkMovementMethod.getInstance()}"
							android:text="@string/author_link"
							tools:text="Eroica" />
					</LinearLayout>

					<com.google.android.material.divider.MaterialDivider
						android:layout_width="match_parent"
						android:layout_height="wrap_content" />

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="16dp">

						<TextView
							android:textAppearance="?textAppearanceBody2"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/label_about_copyright" />

						<TextView
							android:textAppearance="?textAppearanceBody2"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_marginStart="8dp"
							android:layout_weight="1"
							android:gravity="end"
							android:autoLink="web"
							android:linksClickable="true"
							android:text="@string/label_about_copyright_value" />
					</LinearLayout>
				</LinearLayout>
			</com.google.android.material.card.MaterialCardView>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="32dp"
				android:text="@string/leptonica_attribution" />

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="16dp"
				android:textSize="12sp"
				android:fontFamily="monospace"
				android:text="@{Html.fromHtml(@string/leptonica_license)}" />

			<com.google.android.material.card.MaterialCardView
				style="@style/CardContainer"
				android:layout_marginTop="16dp">

				<TextView
					android:textAppearance="?textAppearanceBody2"
					android:id="@+id/licenseReportText"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="16dp"
					android:textSize="12sp"
					android:fontFamily="monospace"
					tools:text="Lorem ipsum dolor sit amet" />
			</com.google.android.material.card.MaterialCardView>

			<com.google.android.material.card.MaterialCardView
				style="@style/CardContainer"
				android:layout_marginTop="16dp">

				<TextView
					android:textAppearance="?textAppearanceBody2"
					android:id="@+id/licenseApache"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="16dp"
					android:textSize="12sp"
					android:fontFamily="monospace"
					tools:text="Lorem ipsum dolor sit amet" />
			</com.google.android.material.card.MaterialCardView>

			<com.google.android.material.card.MaterialCardView
				style="@style/CardContainer"
				android:layout_marginTop="16dp">

				<TextView
					android:textAppearance="?textAppearanceBody2"
					android:id="@+id/licenseKodein"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="16dp"
					android:textSize="12sp"
					android:fontFamily="monospace"
					tools:text="Lorem ipsum dolor sit amet" />
			</com.google.android.material.card.MaterialCardView>
		</LinearLayout>
	</ScrollView>
</layout>
